add shades generate method

--- a/translation/zh_CN.json
+++ b/translation/zh_CN.json
@@ -6,6 +6,7 @@
   "Monochromatic": "单色",
   "Complementary": "辅助色",
   "Split Complementary": "分割辅助色",
+  "Shades": "浓度",
   "Shuffle": "打乱",
   "Edit Color": "编辑颜色",
   "Create Node Group From Palette": "从调色板创建节点组",
