--- a/translation/zh_CN.json
+++ b/translation/zh_CN.json
@@ -1,6 +1,6 @@
 {
   "Generate": "生成",
-  "Load Asset": "加载资产",
+  "Load Lib": "加载资产",
   "Color Helper": "颜色助手",
   "Analogous": "类比",
   "Monochromatic": "单色",
