+ fix uncorrectable name when create palette node group + add max return color preference

--- a/translation/zh_CN.json
+++ b/translation/zh_CN.json
@@ -10,6 +10,7 @@
   "Shuffle": "打乱",
   "Edit Color": "编辑颜色",
   "Create Node Group From Palette": "从调色板创建节点组",
+  "Max Color Return": "颜色返回数量",
   "Extra": "其他",
   "Create Ramp Node": "创建渐变节点",
   "Create Palette Image": "创建色卡图像",
